--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,9 @@ python-dotenv>=0.19.0
 flask-cors>=3.0.10
 pytest>=7.0.0
 pytest-flask>=1.2.0
+flask-jwt-extended>=4.4.0
+pytesseract>=0.3.9
+opencv-python>=4.5.5
+google-api-python-client>=2.48.0
+google-auth>=2.6.0
+flask-bcrypt>=1.0.1
